unpackaged/main/default/objects/Attribute_Master__c/Attribute_Master__c.object-meta.xml
<CustomObject>
    <description>Individual building blocks of the templates used to create the structures for the final configuration. The components are the pieces that are to be configured during the phases of implementation.</description>
    <label>Attribute Master</label>
    <nameField>
        <label>Attribute Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>