unpackaged/main/default/objects/Attribute_Master__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>