unpackaged/main/default/objects/Attribute_Master__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Information that will support the typical user questions or concerns about the core attributes.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>