unpackaged/main/default/objects/Attribute_Master__c/fields/Dev_Attribute_Master_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Attribute_Master_Id__c</fullName>
    <label>Dev Attribute Master Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>