unpackaged/main/default/objects/Attribute_Master__c/fields/Picklist_Master__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist Master</label>
    <referenceTo>Picklist_Master__c</referenceTo>
    <relationshipLabel>Attribute Masters</relationshipLabel>
    <relationshipName>Attribute_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>