unpackaged/main/default/objects/Attribute_Master__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Defines the attribute type as it pertains to the template. This determines the role of the data populated against the attribute for the static value configuration versus being read from a measured value</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Time Series</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Prompt Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>