unpackaged/main/default/objects/Attribute_Master__c/fields/UI_Column_Size__c.field-meta.xml
<CustomField>
    <fullName>UI_Column_Size__c</fullName>
    <label>UI Column Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>table-col-xx-small</fullName>
                <label>XX-Small</label>
            </value>
            <value>
                <fullName>table-col-x-small</fullName>
                <label>X-Small</label>
            </value>
            <value>
                <fullName>table-col-small</fullName>
                <label>Small</label>
            </value>
            <value>
                <fullName>table-col-medium</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>table-col-large</fullName>
                <label>Large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>