unpackaged/main/default/objects/Attribute_Master__c/validationRules/Version_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Version_Status</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(TEM_Version__r.Status__c, &#39;Draft&#39;))</errorConditionFormula>
    <errorDisplayField>TEM_Version__c</errorDisplayField>
    <errorMessage>Please select the TEM Version which has the status as &#39;Draft&#39;.</errorMessage>
</ValidationRule>