unpackaged/main/default/objects/Attribute_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alias__c</columns>
    <columns>Units__c</columns>
    <columns>TEM_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>